--- a/hometask-19-api/build.gradle
+++ b/hometask-19-api/build.gradle
@@ -61,6 +61,7 @@ tasks.withType(Test) {
 
     testLogging {
         lifecycle {
+//            events "started", "failed"
             events "started", "skipped", "failed", "standard_error", "standard_out"
             exceptionFormat "short"
         }
